    * Fix valgrind-spotted issue in BASE-DELETE test.
    * Fix early termination condition in winbindd when trying to 
      connect to a remote DC.
    * Instruct winbindd to ignore fd_set when select() returns -1.
    * BUG 3779: Make nmbd udp sockets non-blocking to prevent problem
      with select returning true but no data being available.


o   Timur Bakeyev <timur@com.bat.ru>
    * BUG 2961: Fix compile warnings for pam_smbpass.
    * BUG 2746, 3763: Fix compile warnings in pam_winbind.


o   Andrew Bartlett <abartlet@samba.org>
    * Work around abort() in the OpenLDAP client libs caused by a NULL 
      msg pointer.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Normalize printing keys when deleting.
    * Only store LANMAN passwords on a change if 'lanman auth = yes'.
    * Look at the NT password (not lanman one) when determining if 'smbpasswd 
      -e' should probably for a password.
    * Default eventlog tdbs to mode 0660 to allow easier access by 
      BUILTIN\Administrators.
    * Remove extra call to create_user on member servers without winbindd.
    * Replace the use of OpenLDAP's ldap_domain2hostlist() for locating 
      AD DC's with out own DNS SRV queries.
    * Fix compile error on HP-UX reported by Ryan Novosielski.
    * Rewrite 'net ads join' to share common code with 'net rpc join' 
      and behave more like a Windows XP client.
    * Remove --with-ldapsam option from configure (only used for 
      backwards compatibility for 2.2 smb.conf files).
    * Remove 'wins partners' and 'hosts equiv' smb.conf parameters.
    * Remove rhosts authentication module.
    * Reimplement 'net ads leave' to disable the machine account in the 
      domain rather than removing it.


o   Guenther Deschner <gd@samba.org>
    [pam_winbind]
    * Attempt to send the correct warning from pam_winbind when a password 
      change was attempted too early.
    * Don't use cached credentials when changing passwords.